java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint8-hints.pass
Cast ...o to File
Change type of t to File
